deploy/peer-authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication

metadata:
  name: default
  namespace: payments

spec:
  mtls:
    mode: STRICT
