deploy/test-latest.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: insecure-latest-test
  namespace: payments

spec:
  replicas: 1

  selector:
    matchLabels:
      app: insecure-latest-test

  template:
    metadata:
      labels:
        app: insecure-latest-test

    spec:
      containers:
        - name: nginx
          image: nginx:latest
