deploy/authorization-reporting-allow.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy

metadata:
  name: allow-reporting-to-ledger
  namespace: payments

spec:

  selector:
    matchLabels:
      app: ledger-api


  action: ALLOW


  rules:

  - from:

    - source:

        principals:

        - "cluster.local/ns/payments/sa/reporting"
